--- a/frontend/html/style.css
+++ b/frontend/html/style.css
@@ -1,5 +1,6 @@
 
 *{
+    color: white;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
@@ -9,7 +10,7 @@
 {
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url(img.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)),url(img.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
@@ -18,10 +19,10 @@
 .form-box
 {
     width: 380px;
-    height: 480px;
+    height: 500px;
     position: relative;
     margin: 6% auto;
-    background: #ffffff;
+    background: linear-gradient(rgba(0,0,0, 0.8), rgba(0,0,0,0.8));
     padding: 5px;
     overflow: hidden;
 }
@@ -43,6 +44,7 @@
     border: 0;
     outline: none;
     position: relative;
+    color: white;
 }
 
 #button
@@ -91,6 +93,7 @@
     border-bottom: 1px solid #999;
     outline: none;
     background: transparent;
+    color: white;
 }
 
 .submit-button
@@ -103,6 +106,7 @@
     border: 0;
     outline: none;
     border-radius: 30px;
+    color: white;
 }
 
 
@@ -113,7 +117,7 @@
 
 span
 {
-    color: #777;
+    color: white;
     font-size: 12px;
     bottom: 65px;
     position: absolute;
