Make the products page display all the products

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -6,6 +6,14 @@
         <title>Products</title>
     </head>
     <body>
-        <p>Product List</p>
+        <h1>Product List</h1>
+        <div class="products">
+            {% for product in products %}
+                <div class="article">
+                    <h2><a href="#">{{ product.name }}</a></h2>
+                    <p>{{ product.detail }}</p>
+                </div>
+            {% endfor %}
+        </div>
     </body>
 </html>
