change the data field as product.details instead of product.detail to reflect the updated model

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -11,7 +11,7 @@
             {% for product in products %}
                 <div class="article">
                     <h2><a href="#">{{ product.name }}</a></h2>
-                    <p>{{ product.detail }}</p>
+                    <p>{{ product.details }}</p>
                 </div>
             {% endfor %}
         </div>
