Makes changes in product_list.html to display cost and seller details and also add some more items to the database.

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -10,8 +10,10 @@
         <div class="products">
             {% for product in products %}
                 <div class="article">
-                    <h2><a href="#">{{ product.name }}</a></h2>
+                    <h3><a href="#">{{ product.name }}</a></h3>
                     <p>{{ product.details }}</p>
+                    <p>{{ product.cost }}</p>
+                    <p>{{ product.seller }}</p>
                 </div>
             {% endfor %}
         </div>
