Add the cost symbol along with cost and display only first 50 characters of details in models.py and refelect it in product_list.html and update the db

--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -11,8 +11,8 @@
             {% for product in products %}
                 <div class="article">
                     <h3><a href="#">{{ product.name }}</a></h3>
-                    <p>{{ product.details }}</p>
-                    <p>{{ product.cost }}</p>
+                    <p>{{ product.snippet }}</p>
+                    <p>{{ product.display_cost }}</p>
                     <p>{{ product.seller }}</p>
                 </div>
             {% endfor %}
