--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -5,7 +5,7 @@
     <div class="products">
         {% for product in products %}
             <div class="article">
-                <h3><a href="#">{{ product.name }}</a></h3>
+                <h2><a href="{% url 'products:details' product.slug %}">{{ product.name }}</a></h2>
                 <p>{{ product.snippet }}</p>
                 <p>{{ product.display_cost }}</p>
                 <p>{{ product.seller }}</p>
