Add the image field to the product and also display the same in the html template

--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -4,6 +4,7 @@
 
     <div class="product-details">
         <div class="product">
+            <img src="{{ product.image.url }}"/>
             <h2>{{ product.name }}</h2>
             <p>{{ product.details }}</p>
             <p>{{ product.display_cost }}</p>
