Display the description of the product instead of the details

--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -6,8 +6,9 @@
         <div class="product">
             <img src="{{ product.image.url }}"/>
             <h2>{{ product.name }}</h2>
-            <p>{{ product.details }}</p>
+            <p>{{ product.description }}</p>
             <p>{{ product.display_cost }}</p>
+            <p>{{ product.details }}</p>
             <p>{{ product.seller }}</p>
         </div>
     </div>
