--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,6 +8,16 @@
         <link rel="stylesheet" href="{% static 'style.css' %}">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li>
+                    <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+                        {% csrf_token %}
+                        <button type="submit">Logout</button>
+                    </form>
+                </li>
+            </ul>
+        </nav>
         <div class="wrapper">
             {% block content %}
             {% endblock %}
