Display ratings in the product details

--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -9,6 +9,7 @@
             <p>{{ product.description }}</p>
             <p>{{ product.display_cost }}</p>
             <p>{{ product.details }}</p>
+            <p>{{ product.rating }}</p>
             <p>{{ product.seller }}</p>
         </div>
     </div>
