Add the functionality for the user to move to singup page in case they dont have any account during login.

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -10,4 +10,9 @@
         {% endif %}
         <input type="submit" name="login" value="login">
     </form>
+    <form class="site-form" action="{% url 'accounts:signup' %}" method="post">
+        <p>Don't have an accout?. You can signup here</p>
+        {% csrf_token %}
+        <input type="submit" name="signup" value="signup">
+    </form>
 {% endblock %}
