--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Sign Up</h1>
-    <form class="site-form" action="/accounts/signup/" method="post">
+    <form class="site-form" action="{% url 'accounts:signup'%}" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" name="signup" value="signup">
