--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -9,14 +9,22 @@
     </head>
     <body>
         <nav>
-            <ul>
-                <li>
-                    <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit">Logout</button>
-                    </form>
-                </li>
-            </ul>
+            {% if user.is_authenticated %}
+                <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+                </form>
+                <form class="orders" action="{% url 'orders:order_details' %}" method="get">
+                    <input type="submit" name="orders" value="orders">
+                </form>
+            {% else %}
+                <form class="site-form" action="{% url 'accounts:login' %}" method="get">
+                    <input type="submit" name="login" value="login">
+                </form>
+                <form class="site-form" action="{% url 'accounts:signup' %}" method="get">
+                    <input type="submit" name="signup" value="signup">
+                </form>
+            {% endif %}
         </nav>
         <div class="wrapper">
             {% block content %}
