send the product id to the orders views when clicked on buy now

--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -14,4 +14,10 @@
         </div>
     </div>
 
+    <form class="orders" action="{% url 'orders:order_details' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="id" value="{{ product.id }}">
+        <input type="submit" name="Buy" value="Buy Now">
+    </form>
+
 {% endblock %}
