--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,18 +1,22 @@
 {% extends 'base_layout.html' %}
 
 {% block content %}
-    <h1>Login</h1>
-    <form class="site-form" action="{% url 'accounts:login' %}" method="post">
-        {% csrf_token %}
-        {{ form }}
-        {% if request.GET.next %}
-            <input type="hidden" name="next" value="{{ request.GET.next }}">
-        {% endif %}
-        <input type="submit" name="login" value="login">
-    </form>
-    <form class="site-form" action="{% url 'accounts:signup' %}" method="get">
-        <p>Don't have an accout?. You can signup here</p>
-        {% csrf_token %}
-        <input type="submit" name="signup" value="signup">
-    </form>
+    <div class="form-box">
+        <div class="wrap">
+            <h2>Login</h2>
+        </div>
+        <form class="site-form" action="{% url 'accounts:login' %}" method="post">
+            {% csrf_token %}
+            {{ form }}
+            {% if request.GET.next %}
+                <input type="hidden" name="next" value="{{ request.GET.next }}">
+            {% endif %}
+            <input type="submit" name="login" value="login">
+        </form>
+        <form class="site-form" action="{% url 'accounts:signup' %}" method="get">
+            <p>Don't have an accout?. You can signup here</p>
+            {% csrf_token %}
+            <input type="submit" name="signup" value="signup">
+        </form>
+    </div>
 {% endblock %}
