--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -6,11 +6,8 @@
         {% for order in orders %}
             <div class="order">
                 <h2>{{ order.productname }}</h2>
-                <p>{{ order.cost }}</p>
-                <p>{{ order.customer_address }}</p>
-                <p>{{ order.city }}</p>
-                <p>{{ order.pincode }}</p>
-                <p>{{ order.phone }}</p>
+                <p>{{ order.getcost }}</p>
+                <p>{{ order.getaddress }}</p>
             </div>
         {% endfor %}
     </div>
