Add styles for the orders details

--- a/assets/style.css
+++ b/assets/style.css
@@ -98,3 +98,12 @@ margin-right:  200px;
 {
     margin-right: 100px;
 }
+
+.orders{
+    margin: 50px 50px 40px 30px;
+}
+
+.order
+{
+    margin: 80px;
+}
